--- a/about/index.html
+++ b/about/index.html
@@ -1,13 +1,78 @@
-<!-- About Me Section -->
-<section id="about-me" style="background: linear-gradient(135deg, #1e3c72, #2a5298); color: #fff; padding: 60px 20px; border-radius: 16px; max-width: 900px; margin: 40px auto; box-shadow: 0 8px 25px rgba(0,0,0,0.3); font-family: 'Arial', sans-serif;">
-  <h2 style="font-size: 2.2em; margin-bottom: 20px; text-align: center;">About Me</h2>
-  <p style="font-size: 1.1em; line-height: 1.8; margin-bottom: 20px;">
-    My name is <strong>Ismail Abdullahi Idris</strong>. I am a dedicated and results-driven professional with a strong background in <strong>sales, marketing, and client engagement</strong>. I have hands-on experience managing multiple projects and achieving measurable results consistently.
-  </p>
-  <p style="font-size: 1.05em; line-height: 1.8; margin-bottom: 20px;">
-    I excel at <strong>strategic planning, problem-solving, and leveraging technology</strong> to optimize performance. My work approach emphasizes efficiency, innovation, and building strong relationships with clients and teams alike.
-  </p>
-  <p style="font-size: 1.05em; line-height: 1.8;">
-    I am passionate about continuous learning and adapting to new challenges, aiming to contribute meaningful value to every project and team I join.
-  </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Me — Ismail Abdullahi Idris</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: #f0f8ff;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      text-align: center;
+      padding: 40px 20px;
+    }
+    header h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+      color: #ffcc00;
+    }
+    header p {
+      font-size: 1.2em;
+      color: #dbeeff;
+    }
+    section {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      background: rgba(0,0,0,0.3);
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    }
+    section h2 {
+      color: #ffd633;
+      margin-bottom: 15px;
+    }
+    section p {
+      line-height: 1.6;
+      font-size: 1.1em;
+      margin-bottom: 12px;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+      color: #ccc;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>About Me</h1>
+  <p>Discover who I am, my skills, and my passions.</p>
+</header>
+
+<section>
+  <h2>Introduction</h2>
+  <p>My name is <strong>Ismail Abdullahi Idris</strong>. I am a creative professional specializing in UI/UX design, video editing, and graphic design. My goal is to craft engaging digital experiences that inspire and captivate audiences.</p>
+
+  <h2>Skills & Expertise</h2>
+  <p>• UI/UX Design — Mobile & Web Interfaces<br>
+     • Video Editing — Short-form, promotional, and demo reels<br>
+     • Graphic Design — Logos, marketing materials, digital assets</p>
+
+  <h2>Passion</h2>
+  <p>I enjoy transforming ideas into visually appealing, functional digital products. I strive for designs that are intuitive, interactive, and tailored to the user’s experience.</p>
 </section>
+
+<footer>
+  © 2025 Ismail Abdullahi Idris
+</footer>
+
+</body>
+</html>
