--- a/index.html
+++ b/index.html
@@ -128,5 +128,13 @@
     contactBtn.addEventListener("click", () => window.location.href = "contact/index.html");
   }
     </script>
+  <script>
+  const contactBtn = document.getElementById("contactBtn");
+  if (contactBtn) {
+    contactBtn.addEventListener("click", function() {
+      window.location.href = "contact/index.html";
+    });
+  }
+  </script>
 </body>
 </html>
