--- a/index.html
+++ b/index.html
@@ -136,5 +136,38 @@
     });
   }
   </script>
+  <script>
+  // Portfolio Button
+  const portfolioBtn = document.getElementById("portfolioBtn");
+  if (portfolioBtn) {
+    portfolioBtn.addEventListener("click", function() {
+      window.location.href = "portfolio/index.html";
+    });
+  }
+
+  // Buy Data Button
+  const buyBtn = document.getElementById("buyBtn");
+  if (buyBtn) {
+    buyBtn.addEventListener("click", function() {
+      window.location.href = "buy data/buy.html";
+    });
+  }
+
+  // About Me Button
+  const aboutBtn = document.getElementById("aboutBtn");
+  if (aboutBtn) {
+    aboutBtn.addEventListener("click", function() {
+      window.location.href = "about/index.html";
+    });
+  }
+
+  // Contact Me Button
+  const contactBtn = document.getElementById("contactBtn");
+  if (contactBtn) {
+    contactBtn.addEventListener("click", function() {
+      window.location.href = "contact me/index.html";
+    });
+  }
+  </script>
 </body>
 </html>
