--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
     });
   }
   </script>
-  <script>
-  // Portfolio Button
+<script>
   const portfolioBtn = document.getElementById("portfolioBtn");
   if (portfolioBtn) {
     portfolioBtn.addEventListener("click", function() {
@@ -145,15 +144,13 @@
     });
   }
 
-  // Buy Data Button
   const buyBtn = document.getElementById("buyBtn");
   if (buyBtn) {
     buyBtn.addEventListener("click", function() {
-      window.location.href = "buy data/buy.html";
+      window.location.href = "buy-data/buy.html";
     });
   }
 
-  // About Me Button
   const aboutBtn = document.getElementById("aboutBtn");
   if (aboutBtn) {
     aboutBtn.addEventListener("click", function() {
@@ -161,13 +158,12 @@
     });
   }
 
-  // Contact Me Button
   const contactBtn = document.getElementById("contactBtn");
   if (contactBtn) {
     contactBtn.addEventListener("click", function() {
-      window.location.href = "contact me/index.html";
+      window.location.href = "contact-me/index.html";
     });
   }
-  </script>
+</script>
 </body>
 </html>
