--- a/index.html
+++ b/index.html
@@ -1,118 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>BrightLearn</title>
-<style>
-  body {
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #1e1e2f, #2c3e50);
-    color: #f0f4f8;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    text-align: center;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ismail Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f4f4;
+      color: #333;
+    }
 
-  header {
-    padding: 40px 0 20px 0;
-    font-size: 2.5em;
-    font-weight: 700;
-    color: #ffdd57;
-    text-shadow: 0 2px 6px rgba(0,0,0,0.5);
-  }
+    header {
+      background: #222;
+      color: #fff;
+      padding: 20px 0;
+      text-align: center;
+    }
 
-  .main-buttons {
-    margin: 50px 0;
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    flex-wrap: wrap;
-  }
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+    }
 
-  .btn {
-    padding: 18px 36px;
-    font-size: 1.2em;
-    font-weight: 700;
-    border-radius: 12px;
-    text-decoration: none;
-    color: #1a1a1a;
-    background-color: #ffd700;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-    transition: all 0.3s ease;
-  }
+    nav {
+      background: #444;
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      padding: 10px 0;
+    }
 
-  .btn:hover {
-    background-color: #ffea75;
-    transform: scale(1.05);
-  }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      padding: 8px 16px;
+      border-radius: 5px;
+      transition: background 0.3s ease;
+    }
 
-  footer {
-    margin-top: auto;
-    padding: 30px 0;
-    background: rgba(0,0,0,0.25);
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
-  }
+    nav a:hover {
+      background: #666;
+    }
 
-  footer a {
-    text-decoration: none;
-    color: #ffd700;
-    font-weight: 600;
-    padding: 12px 24px;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.05);
-    transition: all 0.3s ease;
-  }
+    section {
+      padding: 40px 20px;
+      text-align: center;
+      background: #fff;
+      margin: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
 
-  footer a:hover {
-    background: rgba(255,255,255,0.15);
-    transform: scale(1.05);
-  }
+    footer {
+      background: #222;
+      color: #fff;
+      text-align: center;
+      padding: 15px 10px;
+      font-size: 14px;
+      margin-top: 20px;
+    }
 
-  .footer-text {
-    width: 100%;
-    color: #d6e9ff;
-    margin-top: 15px;
-    font-size: 0.9em;
-  }
+    .btn {
+      display: inline-block;
+      margin-top: 15px;
+      background: #222;
+      color: #fff;
+      padding: 10px 20px;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
 
-  @media(max-width:600px){
-    .btn {width: 80%; font-size:1em;}
-    footer {flex-direction: column; gap: 10px;}
-  }
-</style>
+    .btn:hover {
+      background: #555;
+    }
+  </style>
 </head>
 <body>
 
-<header>BrightLearn</header>
+  <header>
+    <h1>Welcome to Ismail's Portfolio</h1>
+  </header>
 
-<div class="main-buttons">
-  <a href="portfolio/index.html" class="btn">My Portfolio</a>
-  <a href="buy-data/buy.html" class="btn">Buy Data</a>
-</div>
+  <nav>
+    <a href="about/index.html">About Me</a>
+    <a href="portfolio/index.html">Portfolio</a>
+    <a href="buy data/buy.html">Buy Data</a>
+    <a href="contact me/index.html">Contact Me</a>
+  </nav>
 
-<footer>
-  <a href="about/index.html">About Me</a>
-  <a href="contact-me/index.html">Contact Me</a>
-  <div class="footer-text">© 2025 BrightLearn — Ismail Abdullahi Idris</div>
-</footer>
+  <section>
+    <h2>Explore My Work</h2>
+    <p>
+      Here you can find my projects, personal details, and how to get in touch with me.
+    </p>
+    <a href="portfolio/index.html" class="btn">View Portfolio</a>
+  </section>
 
-<script>
-  // Linking buttons in homepage
-  const portfolioBtn = document.getElementById("portfolioBtn");
-  const buyBtn = document.getElementById("buyBtn");
-  const aboutBtn = document.getElementById("aboutBtn");
-  const contactBtn = document.getElementById("contactBtn");
+  <footer>
+    &copy; 2025 Ismail Abdullahi Idris. All Rights Reserved.
+  </footer>
 
-  if (portfolioBtn) portfolioBtn.addEventListener("click", () => window.location.href = "portfolio/index.html");
-  if (buyBtn) buyBtn.addEventListener("click", () => window.location.href = "buy-data/buy.html");
-  if (aboutBtn) aboutBtn.addEventListener("click", () => window.location.href = "about/index.html");
-  if (contactBtn) contactBtn.addEventListener("click", () => window.location.href = "contact-me/index.html");
-</script>
+  <!-- ✅ Linking Script -->
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const links = {
+        about: "about/index.html",
+        contact: "contact me/index.html",
+        portfolio: "portfolio/index.html",
+        buy: "buy data/buy.html"
+      };
+
+      document.querySelectorAll("nav a").forEach(link => {
+        link.addEventListener("click", function (e) {
+          e.preventDefault();
+          const href = this.getAttribute("href");
+          if (href && !href.startsWith("#")) {
+            window.location.href = href;
+          }
+        });
+      });
+    });
+  </script>
+
 </body>
 </html>
