--- a/index.html
+++ b/index.html
@@ -126,5 +126,9 @@
     });
   </script>
 
+  <div class="main-buttons-footer">
+  <a href="portfolio/others.html" class="btn">Others</a>
+  </div>
+
 </body>
 </html>
