--- a/portfolio/others.html
+++ b/portfolio/others.html
@@ -1,8 +1,57 @@
-<section id="ux-beginner-project">
-  <h2>UX Beginner Project – Online Grocery App</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>UX Beginner Project – Online Grocery App</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background: #f4f4f4;
+      color: #333;
+    }
+    h1, h2, h3 {
+      text-align: center;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 20px;
+    }
+    table, th, td {
+      border: 1px solid #333;
+    }
+    th, td {
+      padding: 10px;
+      text-align: left;
+    }
+    ol, ul {
+      margin: 10px 0 20px 40px;
+    }
+    .btn-back {
+      display: inline-block;
+      background: #222;
+      color: #fff;
+      padding: 10px 20px;
+      border-radius: 6px;
+      text-decoration: none;
+      margin-bottom: 20px;
+    }
+    .btn-back:hover {
+      background: #555;
+    }
+  </style>
+</head>
+<body>
 
-  <h3>1. Persona</h3>
-  <table border="1" cellpadding="5" cellspacing="0">
+  <a href="index.html" class="btn-back">← Back to Portfolio</a>
+
+  <h1>UX Beginner Project – Online Grocery App</h1>
+
+  <h2>1. Persona</h2>
+  <table>
     <thead>
       <tr>
         <th>Field</th>
@@ -10,35 +59,17 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>Name</td>
-        <td><!-- Example: Aisha Musa --></td>
-      </tr>
-      <tr>
-        <td>Age</td>
-        <td><!-- Example: 28 --></td>
-      </tr>
-      <tr>
-        <td>Occupation</td>
-        <td><!-- Example: Teacher --></td>
-      </tr>
-      <tr>
-        <td>Goals</td>
-        <td><!-- Example: Order groceries quickly without visiting market --></td>
-      </tr>
-      <tr>
-        <td>Pain Points</td>
-        <td><!-- Example: No time to visit market, dislikes queues --></td>
-      </tr>
-      <tr>
-        <td>Tech Comfort</td>
-        <td><!-- Example: Comfortable with mobile apps --></td>
-      </tr>
+      <tr><td>Name</td><td><!-- Example: Aisha Musa --></td></tr>
+      <tr><td>Age</td><td><!-- Example: 28 --></td></tr>
+      <tr><td>Occupation</td><td><!-- Example: Teacher --></td></tr>
+      <tr><td>Goals</td><td><!-- Example: Order groceries quickly without visiting market --></td></tr>
+      <tr><td>Pain Points</td><td><!-- Example: No time to visit market, dislikes queues --></td></tr>
+      <tr><td>Tech Comfort</td><td><!-- Example: Comfortable with mobile apps --></td></tr>
     </tbody>
   </table>
 
-  <h3>2. User Journey</h3>
-  <table border="1" cellpadding="5" cellspacing="0">
+  <h2>2. User Journey</h2>
+  <table>
     <thead>
       <tr>
         <th>Step</th>
@@ -49,45 +80,15 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>1</td>
-        <td><!-- Example: Opens app --></td>
-        <td><!-- Example: Neutral --></td>
-        <td><!-- Example: Needs login --></td>
-        <td><!-- Example: Simple login flow --></td>
-      </tr>
-      <tr>
-        <td>2</td>
-        <td><!-- Example: Browse items --></td>
-        <td><!-- Example: Curious --></td>
-        <td><!-- Example: Too many items --></td>
-        <td><!-- Example: Categorized + search --></td>
-      </tr>
-      <tr>
-        <td>3</td>
-        <td><!-- Example: Add to cart --></td>
-        <td><!-- Example: Happy --></td>
-        <td><!-- Example: Confused with prices --></td>
-        <td><!-- Example: Clear total display --></td>
-      </tr>
-      <tr>
-        <td>4</td>
-        <td><!-- Example: Checkout --></td>
-        <td><!-- Example: Anxious --></td>
-        <td><!-- Example: Payment issues --></td>
-        <td><!-- Example: Multiple payment options --></td>
-      </tr>
-      <tr>
-        <td>5</td>
-        <td><!-- Example: Order confirmation --></td>
-        <td><!-- Example: Satisfied --></td>
-        <td><!-- Example: Delivery timing unclear --></td>
-        <td><!-- Example: Show estimated delivery --></td>
-      </tr>
+      <tr><td>1</td><td><!-- Opens app --></td><td><!-- Neutral --></td><td><!-- Needs login --></td><td><!-- Simple login flow --></td></tr>
+      <tr><td>2</td><td><!-- Browse items --></td><td><!-- Curious --></td><td><!-- Too many items --></td><td><!-- Categorized + search --></td></tr>
+      <tr><td>3</td><td><!-- Add to cart --></td><td><!-- Happy --></td><td><!-- Confused with prices --></td><td><!-- Clear total display --></td></tr>
+      <tr><td>4</td><td><!-- Checkout --></td><td><!-- Anxious --></td><td><!-- Payment issues --></td><td><!-- Multiple payment options --></td></tr>
+      <tr><td>5</td><td><!-- Order confirmation --></td><td><!-- Satisfied --></td><td><!-- Delivery timing unclear --></td><td><!-- Show estimated delivery --></td></tr>
     </tbody>
   </table>
 
-  <h3>3. Portfolio Write-Up</h3>
+  <h2>3. Portfolio Write-Up</h2>
   <p><strong>Project Name:</strong> Beginner UX Case Study – Online Grocery App</p>
   <p><strong>Objective:</strong> Help users order groceries quickly and easily</p>
 
@@ -104,4 +105,6 @@
     <li><!-- Learning 2: Learned to document process portfolio-ready --></li>
     <li><!-- Learning 3: Ready to advance to wireframes next week --></li>
   </ul>
-</section>
+
+</body>
+</html>
