--- a/portfolio/others/others.html
+++ b/portfolio/others/others.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>UX Beginner Project – Online Grocery App</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Others - UX Beginner Project</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -12,41 +12,45 @@
       background: #f4f4f4;
       color: #333;
     }
+    a.back {
+      display: inline-block;
+      margin-bottom: 20px;
+      text-decoration: none;
+      color: #fff;
+      background: #0077cc;
+      padding: 10px 15px;
+      border-radius: 5px;
+    }
+    a.back:hover {
+      background: #005fa3;
+    }
     h1, h2, h3 {
-      text-align: center;
+      color: #222;
     }
     table {
-      width: 100%;
       border-collapse: collapse;
-      margin-bottom: 20px;
+      width: 100%;
+      margin-bottom: 25px;
     }
     table, th, td {
-      border: 1px solid #333;
+      border: 1px solid #ccc;
     }
     th, td {
       padding: 10px;
       text-align: left;
     }
-    ol, ul {
-      margin: 10px 0 20px 40px;
+    ul {
+      list-style-type: disc;
+      padding-left: 20px;
     }
-    .btn-back {
-      display: inline-block;
-      background: #222;
-      color: #fff;
-      padding: 10px 20px;
-      border-radius: 6px;
-      text-decoration: none;
-      margin-bottom: 20px;
-    }
-    .btn-back:hover {
-      background: #555;
+    ol {
+      padding-left: 20px;
     }
   </style>
 </head>
 <body>
 
-  <a href="index.html" class="btn-back">← Back to Portfolio</a>
+  <a href="index.html" class="back">← Back to Portfolio</a>
 
   <h1>UX Beginner Project – Online Grocery App</h1>
 
@@ -59,12 +63,30 @@
       </tr>
     </thead>
     <tbody>
-      <tr><td>Name</td><td><!-- Example: Aisha Musa --></td></tr>
-      <tr><td>Age</td><td><!-- Example: 28 --></td></tr>
-      <tr><td>Occupation</td><td><!-- Example: Teacher --></td></tr>
-      <tr><td>Goals</td><td><!-- Example: Order groceries quickly without visiting market --></td></tr>
-      <tr><td>Pain Points</td><td><!-- Example: No time to visit market, dislikes queues --></td></tr>
-      <tr><td>Tech Comfort</td><td><!-- Example: Comfortable with mobile apps --></td></tr>
+      <tr>
+        <td>Name</td>
+        <td>Aisha Musa</td>
+      </tr>
+      <tr>
+        <td>Age</td>
+        <td>28</td>
+      </tr>
+      <tr>
+        <td>Occupation</td>
+        <td>Teacher</td>
+      </tr>
+      <tr>
+        <td>Goals</td>
+        <td>Order groceries quickly without visiting market</td>
+      </tr>
+      <tr>
+        <td>Pain Points</td>
+        <td>No time to visit market, dislikes queues</td>
+      </tr>
+      <tr>
+        <td>Tech Comfort</td>
+        <td>Comfortable with mobile apps</td>
+      </tr>
     </tbody>
   </table>
 
@@ -80,11 +102,41 @@
       </tr>
     </thead>
     <tbody>
-      <tr><td>1</td><td><!-- Opens app --></td><td><!-- Neutral --></td><td><!-- Needs login --></td><td><!-- Simple login flow --></td></tr>
-      <tr><td>2</td><td><!-- Browse items --></td><td><!-- Curious --></td><td><!-- Too many items --></td><td><!-- Categorized + search --></td></tr>
-      <tr><td>3</td><td><!-- Add to cart --></td><td><!-- Happy --></td><td><!-- Confused with prices --></td><td><!-- Clear total display --></td></tr>
-      <tr><td>4</td><td><!-- Checkout --></td><td><!-- Anxious --></td><td><!-- Payment issues --></td><td><!-- Multiple payment options --></td></tr>
-      <tr><td>5</td><td><!-- Order confirmation --></td><td><!-- Satisfied --></td><td><!-- Delivery timing unclear --></td><td><!-- Show estimated delivery --></td></tr>
+      <tr>
+        <td>1</td>
+        <td>Opens app</td>
+        <td>Neutral</td>
+        <td>Needs login</td>
+        <td>Simple login flow</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Browse items</td>
+        <td>Curious</td>
+        <td>Too many items</td>
+        <td>Categorized + search</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Add to cart</td>
+        <td>Happy</td>
+        <td>Confused with prices</td>
+        <td>Clear total display</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>Checkout</td>
+        <td>Anxious</td>
+        <td>Payment issues</td>
+        <td>Multiple payment options</td>
+      </tr>
+      <tr>
+        <td>5</td>
+        <td>Order confirmation</td>
+        <td>Satisfied</td>
+        <td>Delivery timing unclear</td>
+        <td>Show estimated delivery</td>
+      </tr>
     </tbody>
   </table>
 
@@ -94,16 +146,16 @@
 
   <p><strong>Process:</strong></p>
   <ol>
-    <li><!-- Step 1: Create persona representing target user --></li>
-    <li><!-- Step 2: Map user journey to identify pain points --></li>
-    <li><!-- Step 3: Design solutions for each pain point --></li>
+    <li>Create persona representing target user</li>
+    <li>Map user journey to identify pain points</li>
+    <li>Design solutions for each pain point</li>
   </ol>
 
   <p><strong>Outcome / Learning:</strong></p>
   <ul>
-    <li><!-- Learning 1: Practiced UX fundamentals --></li>
-    <li><!-- Learning 2: Learned to document process portfolio-ready --></li>
-    <li><!-- Learning 3: Ready to advance to wireframes next week --></li>
+    <li>Practiced UX fundamentals</li>
+    <li>Learned to document process portfolio-ready</li>
+    <li>Prepared to advance to wireframes next</li>
   </ul>
 
 </body>
