--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,116 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio - BrightLearn</title>
+  <title>Others - BrightLearn</title>
   <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(120deg, #1e3c72, #2a5298);
-      color: #fff;
-    }
-    header {
-      text-align: center;
-      padding: 40px 20px;
-      background: rgba(0,0,0,0.2);
-      backdrop-filter: blur(6px);
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5em;
-      letter-spacing: 1px;
-    }
-    .container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 24px;
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    .card {
-      background: rgba(255,255,255,0.05);
-      padding: 30px;
-      text-align: center;
-      border-radius: 12px;
-      cursor: pointer;
-      transition: transform 0.2s, background 0.2s;
-      font-size: 1.2em;
-      font-weight: 600;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-      background: rgba(255,255,255,0.15);
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9em;
-      color: #cce0ff;
-      background: rgba(0,0,0,0.1);
-    }
-    @media(max-width:600px){
-      header h1 { font-size: 2em; }
-      .card { font-size: 1.1em; padding: 24px; }
-    }
+    body { font-family: Arial, sans-serif; background: #f4f4f4; margin:0; padding:20px; }
+    h1 { text-align: center; }
+    ul { list-style: none; padding:0; max-width: 600px; margin: auto; }
+    ul li { background:#222; color:#fff; padding:15px; margin:10px 0; border-radius:8px; cursor:pointer; transition: background 0.3s; text-align:center; }
+    ul li:hover { background:#555; }
   </style>
 </head>
 <body>
-
-  <header>
-    <h1>My Portfolio</h1>
-    <p>Select a category to explore my work</p>
-  </header>
-
-  <div class="container">
-    <div class="card" onclick="window.location.href='images/index.html'">Images</div>
-    <div class="card" onclick="window.location.href='videos/index.html'">Videos</div>
-    <div class="card" onclick="window.location.href='graphics/index.html'">Graphics</div>
-    <div class="card" onclick="window.location.href='others/index.html'">Others</div>
-  </div>
-
-  <!-- Keep your existing container and cards -->
-<div class="container">
-  <div class="card" onclick="window.location.href='images/index.html'">Images</div>
-  <div class="card" onclick="window.location.href='videos/index.html'">Videos</div>
-  <div class="card" onclick="window.location.href='graphics/index.html'">Graphics</div>
-  <div class="card" onclick="window.location.href='others/others.html'">Others</div> <!-- This points to your exercise page -->
-</div>
-
-<!-- Remove the duplicate "Others" card outside the container -->
-<!-- <div class="card" onclick="window.location.href='others/others.html'">Others</div> -->
-
-<!-- Remove the old script that targets .portfolio-categories (it doesn't exist) -->
-
-<!-- If you want, you can add a small JS snippet to ensure all Others buttons point correctly -->
-<script>
-  document.addEventListener("DOMContentLoaded", function () {
-    // Update any Others card dynamically if needed
-    const cards = document.querySelectorAll(".card");
-    cards.forEach(card => {
-      if (card.textContent.trim() === "Others") {
-        card.onclick = () => {
-          window.location.href = "others/others.html"; // your exercise page
-        };
-      }
-    });
-  });
-</script>
-
-  
-  <footer>
-    © 2025 BrightLearn — Ismail Abdullahi Idris
-  </footer>
-
-  <script>
-  // ✅ Make "Others" button in portfolio page open your UX Beginner Project
-  document.addEventListener("DOMContentLoaded", function () {
-    const othersBtn = document.querySelector('.portfolio-categories a.btn:last-child');
-    if (othersBtn) {
-      othersBtn.setAttribute('href', 'others.html'); // link to your exercise page
-    }
-  });
-  </script>
-  <div class="card" onclick="window.location.href='others/others.html'">Others</div>
+  <h1>Others Projects</h1>
+  <ul>
+    <li onclick="window.location.href='ux-beginner.html'">UX Beginner Project – Online Grocery App</li>
+    <!-- Za ka iya ƙara project names nan -->
+  </ul>
 </body>
 </html>
