--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,22 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Others - BrightLearn</title>
-  <style>
-    body { font-family: Arial, sans-serif; background: #f4f4f4; margin:0; padding:20px; }
-    h1 { text-align: center; }
-    ul { list-style: none; padding:0; max-width: 600px; margin: auto; }
-    ul li { background:#222; color:#fff; padding:15px; margin:10px 0; border-radius:8px; cursor:pointer; transition: background 0.3s; text-align:center; }
-    ul li:hover { background:#555; }
-  </style>
-</head>
-<body>
-  <h1>Others Projects</h1>
-  <ul>
-    <li onclick="window.location.href='ux-beginner.html'">UX Beginner Project – Online Grocery App</li>
-    <!-- Za ka iya ƙara project names nan -->
-  </ul>
-</body>
-</html>
+<div class="card" onclick="window.location.href='images/index.html'">Images</div>
+<div class="card" onclick="window.location.href='videos/index.html'">Videos</div>
+<div class="card" onclick="window.location.href='graphics/index.html'">Graphics</div>
+<div class="card" onclick="window.location.href='others/index.html'">Others</div>
