--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,4 +1,113 @@
-<div class="card" onclick="window.location.href='images/index.html'">Images</div>
-<div class="card" onclick="window.location.href='videos/index.html'">Videos</div>
-<div class="card" onclick="window.location.href='graphics/index.html'">Graphics</div>
-<div class="card" onclick="window.location.href='others/index.html'">Others</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Portfolio - BrightLearn</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(120deg, #1e3c72, #2a5298);
+      color: #fff;
+    }
+    header {
+      text-align: center;
+      padding: 40px 20px;
+      background: rgba(0,0,0,0.2);
+      backdrop-filter: blur(6px);
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+      letter-spacing: 1px;
+    }
+    header p {
+      margin-top: 10px;
+      font-size: 1.2em;
+      color: #cce0ff;
+    }
+
+    .container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 24px;
+      padding: 40px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+
+    .card {
+      background: rgba(255,255,255,0.05);
+      padding: 30px;
+      text-align: center;
+      border-radius: 12px;
+      cursor: pointer;
+      transition: transform 0.3s, background 0.3s, box-shadow 0.3s;
+    }
+
+    .card h3 {
+      margin-bottom: 10px;
+      font-size: 1.5em;
+    }
+
+    .card p {
+      font-size: 1em;
+      color: #cce0ff;
+    }
+
+    .card:hover {
+      transform: translateY(-8px);
+      background: rgba(255,255,255,0.15);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9em;
+      color: #cce0ff;
+      background: rgba(0,0,0,0.1);
+    }
+
+    @media(max-width:600px){
+      header h1 { font-size: 2em; }
+      .card { font-size: 1.1em; padding: 24px; }
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>My Portfolio</h1>
+    <p>Select a category to explore my work</p>
+  </header>
+
+  <div class="container">
+    <div class="card" onclick="window.location.href='images/index.html'">
+      <h3>Images</h3>
+      <p>Explore all my image projects</p>
+    </div>
+
+    <div class="card" onclick="window.location.href='videos/index.html'">
+      <h3>Videos</h3>
+      <p>Watch my video projects</p>
+    </div>
+
+    <div class="card" onclick="window.location.href='graphics/index.html'">
+      <h3>Graphics</h3>
+      <p>See my graphics and designs</p>
+    </div>
+
+    <div class="card" onclick="window.location.href='others/index.html'">
+      <h3>Others</h3>
+      <p>View special projects like UX exercises</p>
+    </div>
+  </div>
+
+  <footer>
+    © 2025 BrightLearn — Ismail Abdullahi Idris
+  </footer>
+
+</body>
+</html>
