--- a/portfolio/others/ux-beginner.html
+++ b/portfolio/others/ux-beginner.html
@@ -5,65 +5,95 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UX Beginner Project – Online Grocery App</title>
   <style>
-    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#2a5298; color:#fff; }
-    header { text-align:center; padding:40px 20px; background: rgba(0,0,0,0.2); }
-    section { max-width:800px; margin:40px auto; padding:20px; background: rgba(0,0,0,0.3); border-radius:10px; }
-    h2, h3 { color:#ffd633; }
-    table { width:100%; border-collapse: collapse; margin:15px 0; }
-    table, th, td { border:1px solid #fff; }
-    th, td { padding:8px; text-align:left; }
-    a { color:#ffd633; text-decoration:none; }
-    a:hover { text-decoration:underline; }
-    footer { text-align:center; padding:20px; margin-top:20px; background: rgba(0,0,0,0.2); font-size:0.9em; }
+    body {
+      margin:0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #1e3c72, #2a5298);
+      color: #fff;
+    }
+    header {
+      text-align: center;
+      padding: 40px 20px;
+    }
+    header h1 { font-size: 2em; margin-bottom: 5px; }
+    header p { font-size:1.1em; color:#cce0ff; }
+    section {
+      max-width: 900px;
+      margin: 30px auto;
+      padding: 30px;
+      background: rgba(255,255,255,0.05);
+      border-radius: 12px;
+    }
+    h2 { color:#ffcc00; }
+    table { width: 100%; border-collapse: collapse; margin-bottom: 20px; }
+    th, td { border: 1px solid #fff; padding: 8px; text-align: left; }
+    th { background: rgba(255,255,255,0.1); }
+    ul, ol { padding-left: 20px; }
+    footer { text-align:center; padding:20px; color:#cce0ff; }
+    a.back-btn {
+      display:inline-block;
+      margin-bottom: 20px;
+      padding: 8px 16px;
+      background:#222;
+      color:#fff;
+      border-radius:6px;
+      text-decoration:none;
+    }
+    a.back-btn:hover { background:#555; }
   </style>
 </head>
 <body>
+
   <header>
-    <h1>UX Beginner Project – Online Grocery App</h1>
-    <p><a href="index.html">← Back to Others</a></p>
+    <h1>UX Beginner Project</h1>
+    <p>Online Grocery App – Case Study</p>
+    <a href="index.html" class="back-btn">&larr; Back to Others</a>
   </header>
 
   <section>
     <h2>1. Persona</h2>
     <table>
       <tr><th>Field</th><th>Description</th></tr>
-      <tr><td>Name</td><td><!-- Example: Aisha Musa --></td></tr>
-      <tr><td>Age</td><td><!-- Example: 28 --></td></tr>
-      <tr><td>Occupation</td><td><!-- Example: Teacher --></td></tr>
-      <tr><td>Goals</td><td><!-- Example: Order groceries quickly --></td></tr>
-      <tr><td>Pain Points</td><td><!-- Example: No time, dislikes queues --></td></tr>
-      <tr><td>Tech Comfort</td><td><!-- Example: Comfortable with mobile apps --></td></tr>
+      <tr><td>Name</td><td>Ismail Jalam</td></tr>
+      <tr><td>Age</td><td>28</td></tr>
+      <tr><td>Occupation</td><td>Teacher</td></tr>
+      <tr><td>Goals</td><td>Order groceries quickly without visiting market</td></tr>
+      <tr><td>Pain Points</td><td>No time to visit market, dislikes queues</td></tr>
+      <tr><td>Tech Comfort</td><td>Comfortable with mobile apps</td></tr>
     </table>
 
     <h2>2. User Journey</h2>
     <table>
-      <tr><th>Step</th><th>Action</th><th>User Emotion</th><th>Pain Point</th><th>Solution</th></tr>
-      <tr><td>1</td><td><!-- Opens app --></td><td><!-- Neutral --></td><td><!-- Needs login --></td><td><!-- Simple login flow --></td></tr>
-      <tr><td>2</td><td><!-- Browse items --></td><td><!-- Curious --></td><td><!-- Too many items --></td><td><!-- Categorized + search --></td></tr>
-      <tr><td>3</td><td><!-- Add to cart --></td><td><!-- Happy --></td><td><!-- Confused with prices --></td><td><!-- Clear total display --></td></tr>
-      <tr><td>4</td><td><!-- Checkout --></td><td><!-- Anxious --></td><td><!-- Payment issues --></td><td><!-- Multiple payment options --></td></tr>
-      <tr><td>5</td><td><!-- Order confirmation --></td><td><!-- Satisfied --></td><td><!-- Delivery timing unclear --></td><td><!-- Show estimated delivery --></td></tr>
+      <tr><th>Step</th><th>Action</th><th>User Emotion</th><th>Pain Point</th><th>Solution (Design Idea)</th></tr>
+      <tr><td>1</td><td>Opens app</td><td>Neutral</td><td>Needs login</td><td>Simple login flow</td></tr>
+      <tr><td>2</td><td>Browse items</td><td>Curious</td><td>Too many items</td><td>Categorized + search</td></tr>
+      <tr><td>3</td><td>Add to cart</td><td>Happy</td><td>Confused with prices</td><td>Clear total display</td></tr>
+      <tr><td>4</td><td>Checkout</td><td>Anxious</td><td>Payment issues</td><td>Multiple payment options</td></tr>
+      <tr><td>5</td><td>Order confirmation</td><td>Satisfied</td><td>Delivery timing unclear</td><td>Show estimated delivery</td></tr>
     </table>
 
     <h2>3. Portfolio Write-Up</h2>
     <p><strong>Project Name:</strong> Beginner UX Case Study – Online Grocery App</p>
     <p><strong>Objective:</strong> Help users order groceries quickly and easily</p>
+
     <p><strong>Process:</strong></p>
     <ol>
       <li>Create persona representing target user</li>
       <li>Map user journey to identify pain points</li>
       <li>Design solutions for each pain point</li>
     </ol>
+
     <p><strong>Outcome / Learning:</strong></p>
     <ul>
       <li>Practiced UX fundamentals</li>
       <li>Learned to document process portfolio-ready</li>
-      <li>Ready to advance to wireframes</li>
+      <li>Ready to advance to wireframes next week</li>
     </ul>
   </section>
 
   <footer>
-    © 2025 Ismail Abdullahi Idris
+    © 2025 BrightLearn — Ismail Abdullahi Idris
   </footer>
+
 </body>
 </html>
