--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -82,5 +82,8 @@
   © 2025 BrightLearn — Ismail Abdullahi Idris
 </footer>
 
+  <div class="project-list">
+  <div class="card" onclick="window.location.href='data-dashboard.html'">Data Dashboard Project</div>
+  </div>
 </body>
 </html>
