--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -3,106 +3,119 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UX Exercises - Portfolio</title>
+  <title>UX Projects - Ismail Abdullahi Idris</title>
   <style>
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(120deg, #1e3c72, #2a5298);
-      color: #fff;
+      background: #f4f4f4;
+      color: #333;
     }
-
     header {
       text-align: center;
       padding: 40px 20px;
-      background: rgba(0,0,0,0.2);
-      backdrop-filter: blur(6px);
+      background: #1e3c72;
+      color: #fff;
     }
-
     header h1 {
       margin: 0;
       font-size: 2.5em;
-      letter-spacing: 1px;
     }
-
-    #ux-exercises {
-      max-width: 900px;
-      margin: 40px auto;
+    header p {
+      margin: 8px 0 0 0;
+      font-size: 1.1em;
+      color: #cce0ff;
+    }
+    section#ux-exercises {
+      max-width: 1000px;
+      margin: 30px auto;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
       padding: 0 20px;
     }
-
     .exercise-card {
-      background: rgba(255, 255, 255, 0.05);
+      background: #fff;
       padding: 25px;
-      margin: 20px 0;
       border-radius: 12px;
-      text-align: center;
-      transition: transform 0.2s, background 0.2s;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      transition: transform 0.2s, box-shadow 0.2s;
     }
-
     .exercise-card:hover {
       transform: translateY(-5px);
-      background: rgba(255,255,255,0.15);
+      box-shadow: 0 8px 25px rgba(0,0,0,0.2);
     }
-
     .exercise-card h3 {
-      margin-bottom: 12px;
+      margin-top: 0;
+      color: #1e3c72;
     }
-
     .exercise-card p {
-      margin-bottom: 15px;
+      margin: 10px 0 15px 0;
+      font-size: 1em;
+      color: #555;
     }
-
-    .btn {
+    .exercise-card a.btn {
       display: inline-block;
-      padding: 10px 25px;
-      background: #222;
+      padding: 10px 20px;
+      background: #1e3c72;
       color: #fff;
-      border-radius: 6px;
       text-decoration: none;
-      font-weight: 600;
+      border-radius: 6px;
       transition: background 0.3s;
     }
-
-    .btn:hover {
-      background: #555;
+    .exercise-card a.btn:hover {
+      background: #2a5298;
     }
-
     footer {
       text-align: center;
       padding: 20px;
       font-size: 0.9em;
-      color: #cce0ff;
-      background: rgba(0,0,0,0.1);
-      margin-top: 40px;
+      color: #555;
+      background: #eee;
+      margin-top: 50px;
+    }
+    @media(max-width:600px){
+      header h1 { font-size: 2em; }
+      .exercise-card { padding: 20px; }
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>UX Exercises</h1>
-    <p>Click on a project to see its full details</p>
+    <h1>UX Projects Hub</h1>
+    <p>Click "View Project" to explore each exercise</p>
   </header>
 
   <section id="ux-exercises">
+
     <!-- First Exercise -->
     <div class="exercise-card">
       <h3>1. UX Beginner Project – Online Grocery App</h3>
-      <p>Start your UX journey with this beginner project</p>
+      <p>Start your UX journey with this beginner project. Learn persona creation, user journeys, and basic case study write-up.</p>
       <a href="ux-beginner.html" class="btn">View Project</a>
     </div>
 
     <!-- Second Exercise -->
     <div class="exercise-card">
-      <h3>2. UX Second Exercise – Example Project</h3>
-      <p>Another project to showcase your UX skills</p>
-      <a href="ux-second.html" class="btn">View Project</a>
+      <h3>2. Data Dashboard Project</h3>
+      <p>Analyze and visualize data for decision-making. Build charts, metrics, and interactive dashboards for real-world scenarios.</p>
+      <a href="data-dashboard.html" class="btn">View Project</a>
     </div>
+
+    <!-- Future Exercises -->
+    <!--
+    <div class="exercise-card">
+      <h3>3. Next Exercise Name</h3>
+      <p>Description here...</p>
+      <a href="next-exercise.html" class="btn">View Project</a>
+    </div>
+    -->
+    
   </section>
 
   <footer>
-    © 2025 Ismail Abdullahi Idris — BrightLearn
+    © 2025 Ismail Abdullahi Idris
   </footer>
 
 </body>
