--- a/contact me/index.html
+++ b/contact me/index.html
@@ -95,6 +95,29 @@
     </p>
   </section>
 
+  // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyCqBs3z1sHmfoqO5-R6IH-epqbp9ypt9GE",
+  authDomain: "ismailjalam-a74e4.firebaseapp.com",
+  projectId: "ismailjalam-a74e4",
+  storageBucket: "ismailjalam-a74e4.firebasestorage.app",
+  messagingSenderId: "791455932737",
+  appId: "1:791455932737:web:e2537d83c9277a1ad541c0",
+  measurementId: "G-QVE0DHCNKD"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
+
+  
   <footer>
     © 2025 Ismail Abdullahi Idris
   </footer>
