--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -103,6 +103,12 @@
       <a href="data-dashboard.html" class="btn">View Project</a>
     </div>
 
+    <!-- Snippet: Video & Image Showcase Card -->
+<div class="card" onclick="window.location.href='video-&-image-showcase.html'">
+  <h3>Video & Image Showcase</h3>
+  <p>Watch selected videos and images from my projects</p>
+</div>
+    
     <!-- Future Exercises -->
     <!--
     <div class="exercise-card">
