--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -103,10 +103,10 @@
       <a href="data-dashboard.html" class="btn">View Project</a>
     </div>
 
-    <!-- Snippet: Video & Image Showcase Card -->
-<div class="card" onclick="window.location.href='video-&-image-showcase.html'">
-  <h3>Video & Image Showcase</h3>
+    <div class="exercise-card">
+  <h3>3. Video & Image Showcase</h3>
   <p>Watch selected videos and images from my projects</p>
+  <a href="video-&-image-showcase.html" class="btn">View Project</a>
 </div>
     
     <!-- Future Exercises -->
