--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -102,13 +102,13 @@
       <p>Analyze and visualize data for decision-making. Build charts, metrics, and interactive dashboards for real-world scenarios.</p>
       <a href="data-dashboard.html" class="btn">View Project</a>
     </div>
-
-    <div class="exercise-card">
+    
+    <!-- Third Exercise: Video & Image Showcase -->
+<div class="exercise-card">
   <h3>3. Video & Image Showcase</h3>
   <p>Watch selected videos and images from my projects</p>
-  <a href="video-&-image-showcase.html" class="btn">View Project</a>
+  <a href="Video-&-Image-Showcase.html" class="btn">View Project</a>
 </div>
-    
     <!-- Future Exercises -->
     <!--
     <div class="exercise-card">
