--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -109,6 +109,12 @@
   <p>Watch selected videos and images from my projects</p>
   <a href="Video-&-Image-Showcase.html" class="btn">View Project</a>
 </div>
+    <!-- UX Flow Studio Card -->
+<div class="exercise-card">
+  <h3>UX Flow Studio – Wireframes & Prototypes</h3>
+  <p>Explore wireframes, prototypes, and UI snippets demonstrating my UX workflow.</p>
+  <a href="UX-FlowStudio.html" class="btn">View Project</a>
+</div>
     <!-- Future Exercises -->
     <!--
     <div class="exercise-card">
