--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -123,6 +123,13 @@
       <a href="next-exercise.html" class="btn">View Project</a>
     </div>
     -->
+
+    <!-- Usability Optimization Case Study Card -->
+<div class="exercise-card">
+  <h3>Usability Optimization — Case Study</h3>
+  <p>Before & after UX improvements: problem diagnosis, solution design and measurable outcomes.</p>
+  <a href="usability-case.html" class="btn">View Project</a>
+</div>
     
   </section>
 
