--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -130,6 +130,13 @@
   <p>Before & after UX improvements: problem diagnosis, solution design and measurable outcomes.</p>
   <a href="usability-case.html" class="btn">View Project</a>
 </div>
+
+    <!-- UX Audit & Redesign Card -->
+<div class="exercise-card">
+  <h3>UX Audit & Redesign Case Study</h3>
+  <p>Discover how I analyzed and improved a flawed app interface to enhance usability and overall user satisfaction.</p>
+  <a href="UX-Audit-Redesign.html" class="btn">View Project</a>
+</div> 
     
   </section>
 
