--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -131,12 +131,12 @@
   <a href="usability-case.html" class="btn">View Project</a>
 </div>
 
-    <!-- UX Audit & Redesign Card -->
+    <!-- UX Flow Studio Card -->
 <div class="exercise-card">
-  <h3>UX Audit & Redesign Case Study</h3>
-  <p>Discover how I analyzed and improved a flawed app interface to enhance usability and overall user satisfaction.</p>
-  <a href="UX-Audit-Redesign.html" class="btn">View Project</a>
-</div> 
+  <h3>UX Flow Studio – Wireframes & Prototypes</h3>
+  <p>Explore wireframes, prototypes, and UI snippets demonstrating my UX workflow and user-centered design process.</p>
+  <a href="ux-flowstudio/ux-flowstudio.html" class="btn">View Project</a>
+</div>
     
   </section>
 
