--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -134,8 +134,8 @@
     <!-- UX Flow Studio Card -->
 <div class="exercise-card">
   <h3>UX Flow Studio – Wireframes & Prototypes</h3>
-  <p>Explore wireframes, prototypes, and UI snippets demonstrating my UX workflow and user-centered design process.</p>
-  <a href="ux-flowstudio/ux-flowstudio.html" class="btn">View Project</a>
+  <p>Explore wireframes, prototypes, and UI snippets demonstrating my UX workflow.</p>
+  <a href="UX-FlowStudio.html" class="btn">View Project</a>
 </div>
     
   </section>
