--- a/portfolio/others/index.html
+++ b/portfolio/others/index.html
@@ -135,7 +135,7 @@
 <div class="exercise-card">
   <h3>UX Flow Studio – Wireframes & Prototypes</h3>
   <p>Explore wireframes, prototypes, and UI snippets demonstrating my UX workflow.</p>
-  <a href="UX-FlowStudio.html" class="btn">View Project</a>
+  <a href="ux-flowstudio.html" class="btn">View Project</a>
 </div>
     
   </section>
